--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
     "@types/react-dom": "^19.0.2",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
@@ -28,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.7.3"
   }
 }
