--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "html-react-parser": "^5.2.2",
     "postcss-import": "^16.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.7.3"
   }
 }
